[gd_scene load_steps=8 format=2]

[ext_resource path="res://Levels/spike.png" type="Texture" id=1]
[ext_resource path="res://Levels/Spike.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "off"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "turn_off"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 2, 1, 0 ]
}

[sub_resource type="Animation" id=3]
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 8, 8 )

[node name="Spike" type="Area2D" groups=[
"spike",
]]
collision_layer = 16
collision_mask = 10
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "off"
anims/off = SubResource( 1 )
anims/turn_off = SubResource( 2 )
anims/turn_on = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 4 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 32
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
visible = false
shape = SubResource( 5 )

[node name="OffsetTimer" type="Timer" parent="."]
wait_time = 0.001
one_shot = true

[node name="TimerToOn" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="TimerToOff" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
[connection signal="timeout" from="OffsetTimer" to="." method="_on_OffsetTimer_timeout"]
[connection signal="timeout" from="TimerToOn" to="." method="_on_TimerToOn_timeout"]
[connection signal="timeout" from="TimerToOff" to="." method="_on_TimerToOff_timeout"]
